<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/ui_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/ui_padding">

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/label_titulo" style="@style/UiLabel" />
        <EditText android:id="@+id/etTitulo" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:inputType="text"
            android:hint="@string/hint_titulo" />

        <Space android:layout_width="match_parent" android:layout_height="@dimen/ui_gap" />

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/label_desc" style="@style/UiLabel" />
        <EditText android:id="@+id/etDesc" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:inputType="textMultiLine"
            android:minLines="3" android:gravity="top" android:hint="@string/hint_desc" />

        <Space android:layout_width="match_parent" android:layout_height="@dimen/ui_gap" />

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/label_tipo" style="@style/UiLabel" />
        <EditText android:id="@+id/etTipo" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:inputType="text"
            android:hint="@string/hint_tipo" />

        <Space android:layout_width="match_parent" android:layout_height="@dimen/ui_gap" />

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/label_img" style="@style/UiLabel" />
        <EditText android:id="@+id/etImg" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:inputType="textUri"
            android:hint="@string/hint_img" />

        <Space android:layout_width="match_parent" android:layout_height="@dimen/ui_gap" />

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/label_link" style="@style/UiLabel" />
        <EditText android:id="@+id/etLink" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:inputType="textUri"
            android:hint="@string/hint_link" />

        <Space android:layout_width="match_parent" android:layout_height="@dimen/ui_gap" />

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/label_rating" style="@style/UiLabel" />
        <RatingBar
            android:id="@+id/rbFormRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            android:rating="0" />

        <Space android:layout_width="match_parent" android:layout_height="@dimen/ui_gap" />

        <Button android:id="@+id/btnGuardar" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="@string/btn_guardar"
            style="@style/UiButton" />

        <Space android:layout_width="match_parent" android:layout_height="8dp" />

        <Button android:id="@+id/btnCancelar" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="@string/btn_cancelar"
            style="@style/UiButtonDanger" />

    </LinearLayout>

</ScrollView>